--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^5.5.0",
     "next": "12.0.3",
+    "nth-check": "^2.0.1",
     "postcss-cli": "^9.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
