--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^5.5.0",
+    "formik": "^2.2.9",
     "next": "12.0.3",
     "nth-check": "^2.0.1",
     "postcss-cli": "^9.0.2",
@@ -16,7 +17,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
