--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
+    "sitemap": "^7.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
